client/src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@import url('https://fonts.googleapis.com/css2?family=Architects+Daughter&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Playwrite+DE+Grund:wght@100..400&display=swap');

*{
  color: white;
}


h1, h2, h3, h4, h5, h6{
  font-family: 'Architects Daughter', cursive;
}

p, ul, li{
  font-family: 'Playwright', sans-serif;
}

body {
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  background-color: black;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
    monospace;
}

/* Footer start */
.footer {
  background-color: black;
  padding: 20px;
  text-align: center;
}

.footer-content {
  max-width: 960px;
  margin: 0 auto;
}

.footer-links {
  margin-top: 10px;
}

.footer-link {
  text-decoration: none;
  display: inline-flex;
  align-items: center;
  font-size: large;
}

.footer-link:hover {
  color: lightblue;
}

.footer-icon {
  margin-right: 5px;
  width: 20px; 
  height: 20px; 
}
/* Footer end*/

/* HomeCard Styling start */
.HomeCard-container {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 75vh;
  background-color: black;
}

.card-container {
  display: flex;
  justify-content: space-around;
  width: 60%;
  max-width: 900px; /* Set a max-width to limit stretching */
  height: 40vh;
  background-color: black;
}

.card {
  border-radius: 10px;
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
  width: 350px; 
  height: 400px; 
  padding: 20px;
  margin: 20px;
  text-align: center;
  color: black;
  transition: transform 0.3s;
  display: flex;
  flex-direction: column;
}

.card:hover {
  transform: translateY(-10px);
  cursor: pointer;
}

.card:not(:last-child) {
  margin-right: 20px;
}

.card h2 {
  margin-bottom: 10px;
  font-size: larger;
}

.card img {
  max-width: 100%;
  border-radius: 5px;
  margin-bottom: 10px;
  align-self: center;
}

/* Responsive Layout */
@media (max-width: 768px) {
  .card-container {
    flex-direction: column; 
    align-items: center;
  }
  
  .card {
    width: 100%;
    height: auto; 
    margin-bottom: 20px;
  }
}
/* HomeCard Styling end */

